--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DonnieDarko</title>
+    <title>Schitzo</title>
+    <link rel="stylesheet" href="style.css" />
+
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-   <h1>28:06:42:12. that is when the world will end.</h1>
+      <nav>
+<h1>DonnieDarko</h1>
+<ul id="nav-ul">
+<li class="nav-li">
+<a href="index.html">Home</a>
+</li>
+<li class="nav-li">
+<a href="portfolio.html">Portfolio</a>
+</li>
+</ul>
+
+
+      </nav>
+      <main>
+        <div class="sidebar">
+<img class="https://i.pinimg.com/736x/51/6f/74/516f741d9c38c37e9d5ac197e5a3fc8e.jpg" src=""/>
+
+
+
+        </div>
+
+        <div class="content">
+          <h2>DonnieDarko</h2>
+          <p>why are you wearing that stupid bunny suit..?</p>
+          <div id="interests"></div>
+
+          <h3>DonnieDarko</h3>
+          <ul>
+            <li>28:06:41:12. that is when the world will end.</li>
+            <li>JET ENGINE !!</li>
+          </ul>
+        </div>
+      </main>
     </div>
   </body>
 </html>
